# jolly

./: .gitignore  CMakeLists.txt  Makefile  README.md
ijolly/: ijolly.py  jollypy.py
ijolly/src/: ijolly.py  jollypy.py
ijolly/tests/: test_integer_to_string_converters.py  test_interactive_jolly.py  test_jolly_shell.py  test_memory_watcher.py
images/: brainfuck.jolly  echo.jolly  hello_world.jolly
src/: CMakeLists.txt  jolly.c  memory.h  primitives.c  primitives.h  vm.c  vm.h
src/lib/: CMakeLists.txt  nolog.h  primitives.c  vm.c
src/lib/includes/: memory.h  primitives.h  vm.h
tests/: CMakeLists.txt  preprocess_tests.sh  primitives_tests.check  vm_tests.check
